fixed navbar position so its always visible at the top of the screen

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,13 @@ h1 {
   text-align: center;
   justify-content: center;
   align-items: center;
+  width: 100%;
+}
 
+.containerNavbar{
+  position: fixed;
+  width: 100%;
+  z-index: 5;
 }
 
 .buttonAnimated {
@@ -86,7 +92,7 @@ h1 {
   cursor: pointer;
   text-align: end;
   position: fixed;
-  right: 0; 
+  right: 0;
 }
 
 .burgerclosingbutton{
@@ -118,7 +124,6 @@ h1 {
   border: none;
   cursor: pointer;
   font-size: 1em;
-
 }
 
 .burgerdiv {
@@ -169,6 +174,10 @@ h1 {
   display: flex;
   justify-content: center;
   text-align: center;
+}
+
+.aboutMeHeader{
+  padding-top: 5em;
 }
 
 .myPicture {
